# Daikin-Rotex-HPSU-CAN-Seriell

.github/workflows/: build.yml
components/daikin_rotex_can/tests/: CMakeLists.txt  test.cpp
templates/: Berechnung COP.yaml
